k8/GCP/Routing,LoadBalancing,Ingress/Deploying_Service_or_Ingress_on_GKE/02-ingress/hello_gke_ing_ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gke-ing
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-gke-ing
                port:
                  number: 80
